style.css
/*/ Base /*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

li {
    list-style: none;
}

html, body {
    width: 100%;
    height: 100%;
}

[type="text"] {
    position: absolute;
    opacity: 0;
    pointer-events: none;
}

.bold {
    font-weight: bold;
}

.hidden {
    opacity: 0;
}

/*/ html /*/

html {
    font-family: Inter;
    overflow: hidden;

    /* Interface */
    --z-footer: 20;
    --z-navigation: 10;
    --z-header: 20;
    --z-article: 25;
    --z-imagePreview: 30;

    /* Dynamically set by JS. */
    --articleFrameWidth: 0;
    --articleFrameHeight: 0;
}

/*/ body /*/

body {
    display: flex;
    background: var(--body-background);
    border: var(--global-border-size) solid var(--global-border-color);
}

/*/ Sidebar /*/

aside {
    font-family: Trash;
    display: flex;
    justify-content: space-between;
    padding: var(--main-padding) 0;
    color: var(--dark);
    grid-area: aside;
    writing-mode: tb;
    transform: rotate(180deg);
    font-size: 30px;
    line-height: calc(var(--aside-width) + 0.215em);
    white-space: nowrap;
    width: var(--aside-width);
    border-left: var(--global-border-size) solid var(--global-border-color);
    overflow: hidden;
    flex-shrink: 0;
}

.clock {
    font-weight: normal;
}

/*/ History /*/

header {
    position: relative;
    grid-area: header;
    color: var(--bright);
    display: flex;
    overflow: hidden;
    padding: var(--main-padding);
    padding-bottom: 0;
    z-index: var(--z-header);
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

.history {
    display: flex;
    align-items: center;
    font-size: 30px;
}

.history::after {
    /* This ensures that the header will have a height even before
       the first entry is being pushed. */
    content: "*";
    opacity: 0;
}

.history li {
    cursor: pointer;
    white-space: nowrap;
}

.history li::after {
    content: " <-";
    white-space: pre;
    margin-right: -0.3ex;
}

.history li[data-chain="start"]::after {
    content: " ⁂ ";
    margin-right: 1ex;
}

.history li span,
.history::after {
    pointer-events: none;
    position: relative;
    display: inline-block;
    box-shadow: inset 0 0 0 2px var(--bright);
    border-radius: var(--uiButtonBorderRadius);
    padding: .25ex .9ex;
}

.history li:first-of-type span,
.history li:hover span {
    background: var(--bright);
    color: var(--dark);
}

/*/ Article Area /*/

main {
    display: flex;
    flex-direction: column;
    background: var(--main-background);
    border-right: none;
    border-top: none;
    position: relative;
    overflow: hidden;
    flex-grow: 1;
}

#articleBleedBox {
    flex-grow: 1;
    padding: calc(var(--main-padding) + var(--lap));
}

#articleCropBox {
    position: relative;
    height: 100%;
}

/*/ Navigation /*/

nav {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    align-items: center;
    justify-content: center;
    --option-height: 60px;
    --option-font-size: 32px;
    z-index: var(--z-navigation);
    display: flex;
    opacity: 0;
    transition: opacity 125ms ease-in-out;
}

nav[data-is-visible=true] {
    opacity: 1;
}

#navSelect {
    max-width: 500px;
}

.navOption {
    margin-top: 1.5ex;
    display: flex;
}

.navOption:first-child {
    margin-top: 0;
}

[data-navOptionIdx] {
    width: var(--option-height);
    height: var(--option-height);
    background: var(--upcoming-option-background);
    color: var(--upcoming-option-color);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: var(--option-font-size);
    border-radius: var(--option-height);
    border-bottom-right-radius: 0;
    flex-shrink: 0;
}

[data-navOptionIdx="0"]::before { content: ""; }
[data-navOptionIdx="1"]::before { content: "➀"; }
[data-navOptionIdx="2"]::before { content: "➁"; }
[data-navOptionIdx="3"]::before { content: ""; }
[data-is-available="false"] [data-navOptionIdx]::before { content: ""; }

.navOptionTitle {
    height: var(--option-height);
    font-size: var(--option-font-size);
    background: var(--upcoming-option-background);
    color: var(--upcoming-option-color);
    display: flex;
    align-items: center;
    padding: 0 1.5ex;
    border-radius: var(--option-height);
    border-bottom-left-radius: 0;
    white-space: nowrap;
}

[data-is-available="false"] .navOptionTitle:empty::before {
    content: "L̷͇̇ő̷͓a̴̗͑d̷̲͌i̷͉͛n̶͚̈g̸͓̽…̴̯̂";
}

.grid {
    position: fixed;
    top: 0;
    left: 54px;
    right: 2px;
    bottom: 0;
    pointer-events: none;
}

/*/ Loading Spinner /*/

#loadingSpinner {
    display: flex;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    color: var(--article-loading-spinner-color);
}

/*/ Article Frame /*/

#articleFrame {
    position: absolute;
    top: calc(-1 * var(--lap));
    left: calc(-1 * var(--lap));
    width: calc(var(--articleFrameWidth) + var(--lap) * 2);
    height: calc(var(--articleFrameHeight) + var(--lap) * 2);
    background: var(--articleFrameBackground);
    transition: all 512ms ease-out;
}

/*/ Article /*/

#article {
    position: absolute;
    transition: left 512ms ease-out, top 512ms ease-out,
                width 512ms ease-out, height 512ms ease-out;
    z-index: var(--z-article);
}

#articleContentWrapper {
    position: absolute;
    top: 0; right: 0;
    bottom: 0; left: 0;
    overflow: hidden;
    padding: 30px;
}

#articleThumbnail[src="data:,"],
#articleImage[src="data:,"] {
    display: none;
}

#articleThumbnail {
    margin-top: 20px;
    border: var(--articleThumbnailBorder);
    /* FIXME: Use variable for thumbnail size. */
    max-height: 200px;
    max-width: 200px;
    mix-blend-mode: var(--articleThumbnailMixBlendMode);
}

#articleImage {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 95vh;
    width: 95vw;
    object-fit: contain;
    max-height: var(--original-height);
    max-width: var(--original-width);
    z-index: var(--z-imagePreview);
    border: none;
}

.token {
    display: inline-block;
    position: relative;
    white-space: pre-wrap;
    color: var(--tokenUpcomingColor);
    background: var(--tokenUpcomingBackground);
}

#activeToken {
    color: var(--tokenActiveColor);
    background: var(--tokenActiveBackground);
    z-index: 1;
}

#activeToken #progressToken {
    color: var(--tokenProgressColor);
    background: var(--tokenProgressBackground);
    text-shadow: var(--tokenProgressTextShadow);
    position: absolute;
    right: 0;
}

#activeToken #progressToken::before {
    content: attr(data-upcoming);
}

#activeToken #progressToken::after {
    color: var(--tokenErrorColor);
    background: var(--tokenErrorBackground);
    content: attr(data-mistyped);
    position: absolute;
    left: 0;
    top: 0;
    white-space: nowrap;
    white-space: pre;
}

#articleExtract {
    font: var(--articleExtractFont);
    font-feature-settings: var(--articleExtractFontFeatureSettings);
}

html[style*="--article-extract-extend-span-height"] #activeToken #progressToken,
html[style*="--article-extract-extend-span-height"] #activeToken #progressToken::after {
    height: 100%;
}

.typedToken {
    position: relative;
    color: var(--tokenTypedColor);
    background: var(--tokenTypedBackground);
}

.token::before {
    content: attr(data-word);
    overflow: hidden;
    display: inline-block;
}

/*/ Footer /*/

footer {
    grid-area: footer;
    z-index: var(--z-footer);
    padding: var(--main-padding);
    padding-top: 0;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.footer-image {
    --timing: 500ms;
    --footer-image-max-size: 200px;
    position: absolute;
    mix-blend-mode: difference;
    max-height: var(--footer-image-max-size);
    max-width: var(--footer-image-max-size);
    transform-origin: center;
    transition: all var(--timing) ease-in-out, mix-blend-mode 4s;
}

#controllerWrapper {
    display: inline-flex;
    grid-gap: 10px;
    justify-content: center;
    align-items: center;
}

[data-controller] {
    cursor: pointer;
    outline: none;
    border: none;
    color: var(--bright);
    border-radius: var(--button-height);
    height: var(--button-height);
    font-size: 30px;
    position: relative;
    box-shadow: inset 0 0 0 2px var(--bright);
    border-radius: var(--uiButtonBorderRadius);
    padding: .25ex 1ex;
    display: flex;
    align-items: center;
}

.controllerName {
    padding-right: .5ex;
}

[data-controller]:hover {
    background: var(--bright);
    color: var(--dark);
}

[data-controller] ol {
    position: absolute;
    bottom: calc(100% + 10px);
    display: none;
    flex-direction: column;
    margin-bottom: -10px;
    align-items: center;
    transform: translateX(-50%);
    left: 50%;
    padding-bottom: 10px;
    grid-gap: 10px;
}

[data-controller]:hover ol {
    display: flex;
}

[data-controller]::after {
    // FIXME: Don't use absolute values.
    --selected-settings-height: 14px;
    content: attr(data-selected-option);
    background: var(--bright);
    color: var(--dark);
    font-size: 14px;
    font-family: Trash;
    line-height: calc(var(--selected-settings-height) + 0.215em);
    padding: .2em .8em;
    border-radius: var(--uiButtonBorderRadius);
    height: var(--selected-settings-height);
    white-space: nowrap;
}

[data-controller]:hover::after {
    background: var(--dark);
    color: var(--bright);
}

[data-controller] ol li {
    display: inline-block;
    background: var(--dark);
    color: var(--bright);
    padding: 0 20px;
    border-radius: var(--uiButtonBorderRadius);
    font-size: 30px;
    display: inline-block;
    box-shadow: inset 0 0 0 2px var(--bright);
    border-radius: var(--uiButtonBorderRadius);
    padding: .25ex .9ex;
    white-space: nowrap;
}

[data-controller] ol li:hover {
    background: var(--bright);
    color: var(--dark);
}

[data-controller] ol li::before {
    font-size: .725em;
    position: relative;
    bottom: .1375em;
    content: "○ ";
    margin-left: -.1375em;
}

[data-controller] ol li.selected-option::before {
    content: "● ";
}

[data-controller][data-settings*="multiple"] ol li::before {
    content: "◇ ";
}

[data-controller][data-settings*="multiple"] ol li.selected-option::before {
    content: "◆ ";
}

#shortcuts {
    display: flex;
    grid-gap: 12px;
    flex-direction: column;
    align-items: flex-end;
    position: absolute;
    bottom: 0;
    right: 0;
    padding: var(--main-padding);
}

#shortcuts div {
    font-size: 16px;
    color: var(--dark);
    padding: 0.6ex 1.2ex;
    background: var(--bright);
    border-radius: var(--uiButtonBorderRadius);
    white-space: nowrap;
    display: flex;
    grid-gap: .6ex;
}

#shortcuts dt {
    font-weight: bold;
}

